# Procradicator

./: Makefile
apps/server/: .env.example  Makefile  alembic.ini  pyproject.toml
apps/server/alembic/: env.py
apps/server/alembic/versions/: 183c0eb6f3d3_add_cascades_to_tasks_chat.py  44d5ffd4016a_add_user_ownership_to_tasks_and_chat_.py  781ff0499f7f_init.py  81acc2371abc_fk_focus_sesh_task.py  a3af3148f093_add_users_table.py  a8f2d9c4e1b7_add_focus_sessions.py  b2b1036985a8_add_auth_user_flags.py  b2c5fd2bdd3c_add_oauth_accounts.py  c7f4a8d9e2b1_add_unique_oauth_account_identity.py  ccab95415a10_baseline.py  d4f8a1c9b2e3_rename_users_table_to_user.py  ee2b76fe2c18_init.py  f8c2d6a9b401_rename_display_name_to_username.py
apps/server/src/: config.py  exceptions.py  main.py
apps/server/src/auth/: backend.py  constants.py  dependencies.py  fastapi_users.py  manager.py  password.py  utils.py
apps/server/src/constants/: messages.py  prompts.py
apps/server/src/core/: config.py  logging.py  security.py
apps/server/src/db/: sqlmodelorm.py
apps/server/src/models/: __init__.py  chat.py  focus_session.py  oauth_account.py  task.py  user.py
apps/server/src/repositories/: base.py  chat.py  focus_session.py  session.py  subtask.py  task.py  user.py
apps/server/src/schemas/: auth.py  chat.py  focus_session.py  llm.py  task.py  user.py
apps/server/src/services/: auth.py  chat.py  focus_session.py  llm.py  task.py  user.py
apps/server/src/utils/: auth.py  chat_hist_mapper.py  db_exception_mapper.py  focus_session_http.py  (+2 more)
apps/server/tests/: conftest.py
(+163 files in other folders)
