[project]
name = "server"
version = "0.1.0"
description = "Procradicator Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ollama>=0.6.2",
    "pydantic>=2.13.4",
    "pydantic-ai>=1.104.0",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.50",
    "sqlmodel>=0.0.38",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.14",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = ["D100", "D104"] # Example: ignore missing docstrings in modules/packages

[tool.ruff.lint.isort]
combine-as-imports = true
force-single-line = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.setuptools.package-dir]
where = ["src"]
